# istro-rt

./: CMakeLists.txt  Makefile  README.md  _history.txt  camera.cpp  camera.h  camera_opencv.cpp  camera_opencv.h  config.cpp  config.h  ctrlboard.cpp  ctrlboard.h  dataset.cpp  dataset.h  dmap.cpp  dmap.h  geocalc.cpp  geocalc.h  gpsdev.cpp  gpsdev.h  istro_rt2016.cpp  istro_rt2017.cpp  istro_rt2019.cpp  istro_rt2020.cpp  lidar.cpp  lidar.h  lidar_rplidar.cpp  lidar_tim571.cpp  logger.cpp  logger.h  mtime.cpp  mtime.h  myahrs.cpp  myahrs.h  navig.cpp  navig.h  navig_data.cpp  navig_data.h  navmap.cpp  navmap.h  (+19 more)
conf/: log4cxx.xml  navmap-ba-fei.osm  navmap-ba-hradza.osm  navmap-ba-parkah.osm  navmap-ba-sadjk.osm  navmap-deggendorf.osm  navmap-klondajk.osm  navmap-lednice-zzahrada.osm  navmap-mlazne_hamrniky.osm  navmap-mlazne_marathon.osm  navmap-pisek-palsady.osm
html/: index.html  logp_request.js
html/ramdisk/: _ramdisk_link.txt  istro_rt2020_out.html  istro_rt2020_out.json  istro_rt2020_out.txt
kml/: ba-feistu.kml  ba-hradza.kml  ba-krce.kml  ba-nabrezie.kml  ba-ostredky.kml  ba-parkah.kml  ba-sadjk.kml  deggendorf.kml  klondajk.kml  lednice-zzahrada.kml  mlazne_hamrniky.kml  mlazne_marathon.kml  pisek-palsady.kml  za-parkls.kml  za-parkls2.kml
nn_train/: README.md  data_generator.py  run.py
nn_train/_log/: history_201212a.txt
script/: boot_init_rt2019.sh  boot_init_rt2020.sh  display.sh  display_lidar.sh  freespace.sh  gps_2kml.bat  gps_port.py  gpsd_boot.sh  gpsd_gpspipe.sh  gpsd_init.py  gpsd_init.sh  gpsd_init_GPS1.sh  gpsd_init_USB0.sh  gpsd_init_USB2.sh  gpsd_miniterm_USB0.sh  gpsd_start.sh  gpsd_start_USB0.sh  gpsd_start_USB1.sh  gpsd_start_USB2.sh  gpsd_start_USB3.sh  gpsd_stop.sh  istro_rt2016_cc.bat  istro_rt2016_run.bat  istro_rt2017_cc.bat  istro_rt2017_run.bat  istro_rt2019_cc.bat  istro_rt2019_run.bat  istro_rt2020_cc.bat  istro_rt2020_clean.bat  istro_rt2020_run.bat  istro_start.sh  logc.sh  logg.bat  logg.sh  logp.cpp  logp_cc.bat  logp_logtrunc.sh  logp_restart.sh  logp_start.sh  logp_stop.sh  (+23 more)
script/visionn_client/: CMakeLists.txt  Makefile  visionn.cpp  visionn.h
visionn_server/: model.txt  requirements.txt  visionn_model.py  visionn_server.py  visionn_server_logtrunc.sh  visionn_server_restart.sh  visionn_server_start.sh  visionn_server_stop.sh  visionn_test.py  visionn_test2.py
(+37 files in other folders)
